--- a/curso10/index.html
+++ b/curso10/index.html
@@ -9,15 +9,8 @@
 </head>
 <body>
   <div id="app">
-
     <titulo></titulo>
-
   </div>
-
-  <script>
-    new Vue({
-      
-    })
-  </script>
+  <script src="./vuex.js"></script>
 </body>
 </html>
